# iroha

./: CMakeLists.txt  Jenkinsfile
.jenkinsci/: bindings.groovy
cmake/: dependencies.cmake
docker/develop/: Dockerfile
docs/permissions_compiler/: compiler.py  rst.py
docs/source/core_concepts/: glossary.rst
docs/source/maintenance/: permissions.rst
example/: genesis.block
example/python/: .gitignore
example/python/permissions/: can_add_asset_qty.py  can_add_my_signatory.py  can_add_peer.py  can_add_signatory.py  can_append_role.py  can_create_account.py  can_create_asset.py  can_create_domain.py  can_create_role.py  can_detach_role.py  can_get_all_acc_ast.py  can_get_all_acc_ast_txs.py  can_get_all_acc_detail.py  can_get_all_acc_txs.py  can_get_all_txs.py  (+32 more)
irohad/ametsuchi/: CMakeLists.txt  mutable_storage.hpp  wsv_command.hpp
irohad/ordering/: on_demand_os_transport.hpp
irohad/torii/: command_service.hpp
patch/: libprotobuf-mutator.patch
schema/: block.proto  queries.proto
shared_model/bindings/: CMakeLists.txt  client_api.cpp  client_api.hpp  model_query_builder.cpp  model_query_builder.hpp
shared_model/interfaces/: transaction.hpp
shared_model/utils/: amount_utils.cpp
shared_model/validators/: block_validator.hpp  container_validator.hpp  field_validator.cpp  field_validator.hpp  proposal_validator.hpp  query_validator.hpp  transaction_validator.hpp
test/: CMakeLists.txt
test/fuzzing/: CMakeLists.txt  find_fuzz.cpp  status_fuzz.cpp  torii_fuzz.cpp
test/regression/: regression_test.cpp
test/system/: CMakeLists.txt  irohad_test.cpp
(+64 files in other folders)
